<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Nadpis aplikace -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_heading"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Vstup pro výšku -->
    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/et_height_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="18sp" />

    <!-- Vstup pro hmotnost -->
    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/et_weight_hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp" />

    <!-- Tlačítko pro výpočet -->
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#6200EE"
        android:text="@string/btn_calculate"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Tlačítko pro pochvalu -->
    <Button
        android:id="@+id/btnCommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#6200EE"
        android:text="@string/btn_commend"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Výstup BMI hodnoty -->
    <TextView
        android:id="@+id/tvBMIResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_result"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBMIMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
